fix(park): asList() -> ListOf()